--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -181,6 +181,7 @@
         android:text="Reset"
         android:textSize="36sp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/board"/>
+        android:layout_below="@id/board"
+        android:onClick="reset"/>
 
 </RelativeLayout>
